added LazDE - Lazarus Documentation Editor  from Michael Van Canneyt
 SVN 7019@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -436,9 +436,54 @@ designer/sizecompsdlg.pp svneol=native#text/pascal
 designer/taborderdlg.lfm svneol=native#text/plain
 designer/taborderdlg.lrs svneol=native#text/pascal
 designer/taborderdlg.pas svneol=native#text/pascal
-doceditor/doceditor.lfm svneol=native#text/plain
-doceditor/doceditor.lrs svneol=native#text/pascal
-doceditor/doceditor.pas svneol=native#text/pascal
+doceditor/add.xpm -text svneol=native#image/x-xpixmap
+doceditor/delete.xpm -text svneol=native#image/x-xpixmap
+doceditor/edit.xpm -text svneol=native#image/x-xpixmap
+doceditor/eleditor.pp svneol=native#text/pascal
+doceditor/eleditor.xml svneol=native#text/xml
+doceditor/fmmakeskel.lfm svneol=native#text/plain
+doceditor/fmmakeskel.lrs svneol=native#text/pascal
+doceditor/fmmakeskel.pp svneol=native#text/pascal
+doceditor/fpdeutil.pp svneol=native#text/pascal
+doceditor/frmabout.lfm svneol=native#text/plain
+doceditor/frmabout.lrs svneol=native#text/pascal
+doceditor/frmabout.pp svneol=native#text/pascal
+doceditor/frmbuild.lfm svneol=native#text/plain
+doceditor/frmbuild.lrs svneol=native#text/pascal
+doceditor/frmbuild.pp svneol=native#text/pascal
+doceditor/frmexample.lfm svneol=native#text/plain
+doceditor/frmexample.lrs svneol=native#text/pascal
+doceditor/frmexample.pp svneol=native#text/pascal
+doceditor/frmlink.lfm svneol=native#text/plain
+doceditor/frmlink.lrs svneol=native#text/pascal
+doceditor/frmlink.pp svneol=native#text/pascal
+doceditor/frmmain.lfm svneol=native#text/plain
+doceditor/frmmain.lrs svneol=native#text/pascal
+doceditor/frmmain.pp svneol=native#text/pascal
+doceditor/frmmain.xml svneol=native#text/xml
+doceditor/frmmakeskel.lfm svneol=native#text/plain
+doceditor/frmmakeskel.lrs svneol=native#text/pascal
+doceditor/frmmakeskel.pp svneol=native#text/pascal
+doceditor/frmnewnode.lfm svneol=native#text/plain
+doceditor/frmnewnode.lrs svneol=native#text/pascal
+doceditor/frmnewnode.pp svneol=native#text/pascal
+doceditor/frmoptions.lfm svneol=native#text/plain
+doceditor/frmoptions.lrs svneol=native#text/pascal
+doceditor/frmoptions.pp svneol=native#text/pascal
+doceditor/frmsource.lfm svneol=native#text/plain
+doceditor/frmsource.lrs svneol=native#text/pascal
+doceditor/frmsource.pas svneol=native#text/pascal
+doceditor/frmtable.lfm svneol=native#text/plain
+doceditor/frmtable.lrs svneol=native#text/pascal
+doceditor/frmtable.pp svneol=native#text/pascal
+doceditor/icons.lrs svneol=native#text/pascal
+doceditor/lazde.lpi svneol=native#text/plain
+doceditor/lazde.lpr svneol=native#text/pascal
+doceditor/lazdemsg.pp svneol=native#text/pascal
+doceditor/lazdeopts.pp svneol=native#text/pascal
+doceditor/pgeditor.pp svneol=native#text/pascal
+doceditor/pkedit.pp svneol=native#text/pascal
+doceditor/pkeditor.pp svneol=native#text/pascal
 docs/Contributors.txt svneol=native#text/plain
 docs/CrossCompile.txt svneol=native#text/plain
 docs/DesignGuidelines.txt svneol=native#text/plain
