started OI favourites
 SVN 7033@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -421,7 +421,6 @@ designer/changeclassdialog.lfm svneol=native#text/plain
 designer/changeclassdialog.lrs svneol=native#text/pascal
 designer/changeclassdialog.pas svneol=native#text/pascal
 designer/controlselection.pp svneol=native#text/pascal
-designer/customeditor.pp svneol=native#text/pascal
 designer/designer.pp svneol=native#text/pascal
 designer/designermenu.pp svneol=native#text/pascal
 designer/designerprocs.pas svneol=native#text/pascal
@@ -431,6 +430,7 @@ designer/jitforms.pp svneol=native#text/pascal
 designer/menueditorform.pas svneol=native#text/pascal
 designer/menupropedit.pp svneol=native#text/pascal
 designer/noncontrolforms.pas svneol=native#text/pascal
+designer/objinspext.pas svneol=native#text/pascal
 designer/scalecompsdlg.pp svneol=native#text/pascal
 designer/sizecompsdlg.pp svneol=native#text/pascal
 designer/taborderdlg.lfm svneol=native#text/plain
