--- a/.gitattributes
+++ b/.gitattributes
@@ -1283,6 +1283,7 @@ languages/lazaruside.fr.po svneol=native#text/plain
 languages/lazaruside.he.po svneol=native#text/plain
 languages/lazaruside.it.po svneol=native#text/plain
 languages/lazaruside.itiso.po svneol=native#text/plain
+languages/lazaruside.nl.po svneol=native#text/plain
 languages/lazaruside.pl.po svneol=native#text/plain
 languages/lazaruside.pliso.po svneol=native#text/plain
 languages/lazaruside.plwin.po svneol=native#text/plain
