--- a/examples/grid_semaphor/example/project1.lpi
+++ b/examples/grid_semaphor/example/project1.lpi
@@ -1,22 +1,22 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
+    <PathDelim Value="/"/>
     <Version Value="5"/>
     <General>
       <Flags>
-        <SaveClosedFiles Value="False"/>
         <SaveOnlyProjectUnits Value="True"/>
       </Flags>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="0"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=".exe"/>
       <Title Value="project1"/>
     </General>
     <Units Count="2">
       <Unit0>
-        <CursorPos X="1" Y="21"/>
-        <EditorIndex Value="2"/>
+        <CursorPos X="40" Y="32"/>
+        <EditorIndex Value="1"/>
         <Filename Value="project1.lpr"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
@@ -25,21 +25,20 @@
         <UsageCount Value="28"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="26" Y="151"/>
+        <CursorPos X="23" Y="168"/>
         <EditorIndex Value="0"/>
         <Filename Value="unit1.pas"/>
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
-        <ResourceFilename Value="unit1.lrs"/>
-        <TopLine Value="127"/>
+        <ResourceFilename Value="Unit1.lrs"/>
+        <TopLine Value="150"/>
         <UnitName Value="Unit1"/>
         <UsageCount Value="28"/>
       </Unit1>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
-      <DestinationDirectory Value="$(TestDir)\publishedproject\"/>
       <IgnoreBinaries Value="False"/>
       <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
       <ExcludeFileFilter Value="*.(bak|ppu|ppw|o|so);*~;backup"/>
@@ -47,7 +46,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
+        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
     <RequiredPackages Count="2">
@@ -61,7 +60,7 @@
     </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="4"/>
+    <Version Value="5"/>
     <SearchPaths>
       <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
     </SearchPaths>
