added missing file
 SVN 7059@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -638,6 +638,7 @@ examples/easter/main.lfm svneol=native#text/plain
 examples/easter/main.lrs svneol=native#text/pascal
 examples/easter/main.pas svneol=native#text/pascal
 examples/edittest.pp svneol=native#text/pascal
+examples/grid_semaphor/TSemaphorDBGrid.xpm -text svneol=native#image/x-xpixmap
 examples/grid_semaphor/example/project1.lpi svneol=native#text/plain
 examples/grid_semaphor/example/project1.lpr svneol=native#text/pascal
 examples/grid_semaphor/example/table01.stb -text svneol=unset#application/octet-stream
@@ -649,6 +650,7 @@ examples/grid_semaphor/example/unit1.lrs svneol=native#text/pascal
 examples/grid_semaphor/example/unit1.pas svneol=native#text/pascal
 examples/grid_semaphor/readme.txt svneol=native#text/plain
 examples/grid_semaphor/semaphordbgridicon.lrs svneol=native#text/pascal
+examples/grid_semaphor/semaphordbgrids.pas svneol=native#text/pascal
 examples/grid_semaphor/semaphorgridlpk.lpk svneol=native#text/pascal
 examples/grid_semaphor/semaphorgridlpk.pas svneol=native#text/pascal
 examples/grid_semaphor/semaphorgrids.pas svneol=native#text/pascal
