accelerated TMemo on gtk, gtk2 and win32 interface  from Andrew Haines
 SVN 7060@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1565,6 +1565,7 @@ lcl/interfaces/gtk/gtklclintfh.inc svneol=native#text/pascal
 lcl/interfaces/gtk/gtklistsl.inc svneol=native#text/pascal
 lcl/interfaces/gtk/gtklistslh.inc svneol=native#text/pascal
 lcl/interfaces/gtk/gtklistviewcallback.inc svneol=native#text/pascal
+lcl/interfaces/gtk/gtkmemostrings.inc svneol=native#text/pascal
 lcl/interfaces/gtk/gtkmsgqueue.pp svneol=native#text/pascal
 lcl/interfaces/gtk/gtkobject.inc svneol=native#text/pascal
 lcl/interfaces/gtk/gtkpagecallback.inc svneol=native#text/pascal
@@ -1606,6 +1607,7 @@ lcl/interfaces/gtk2/gtk2interface.lpk svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2interface.pas svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2lclintf.inc svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2lclintfh.inc svneol=native#text/pascal
+lcl/interfaces/gtk2/gtk2memostrings.inc svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2object.inc svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2winapi.inc svneol=native#text/pascal
 lcl/interfaces/gtk2/gtk2winapih.inc svneol=native#text/pascal
@@ -1690,6 +1692,7 @@ lcl/interfaces/win32/win32lclintf.inc svneol=native#text/pascal
 lcl/interfaces/win32/win32lclintfh.inc svneol=native#text/pascal
 lcl/interfaces/win32/win32listsl.inc svneol=native#text/pascal
 lcl/interfaces/win32/win32listslh.inc svneol=native#text/pascal
+lcl/interfaces/win32/win32memostrings.inc svneol=native#text/pascal
 lcl/interfaces/win32/win32object.inc svneol=native#text/pascal
 lcl/interfaces/win32/win32proc.pp svneol=native#text/pascal
 lcl/interfaces/win32/win32winapi.inc svneol=native#text/pascal
