added dialog for choosing testcase name    from Dean
 SVN 7131@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -72,6 +72,9 @@ components/fpcunit/ide/fpcunitide.lpk svneol=native#text/pascal
 components/fpcunit/ide/fpcunitide.pas svneol=native#text/pascal
 components/fpcunit/ide/fpcunitlazideintf.pas svneol=native#text/pascal
 components/fpcunit/ide/lib/README.txt svneol=native#text/plain
+components/fpcunit/ide/testcaseopts.lfm svneol=native#text/plain
+components/fpcunit/ide/testcaseopts.lrs svneol=native#text/pascal
+components/fpcunit/ide/testcaseopts.pas svneol=native#text/pascal
 components/fpcunit/lib/README.txt svneol=native#text/plain
 components/gtk/gtkglarea/gtkglarea.lrs svneol=native#text/pascal
 components/gtk/gtkglarea/gtkglarea_int.pp svneol=native#text/pascal
