--- a/.gitattributes
+++ b/.gitattributes
@@ -258,7 +258,8 @@ components/sqldb/tsqltransaction.xpm -text svneol=native#image/x-xpixmap
 components/sqlite/sqliteds.lrs svneol=native#text/pascal
 components/sqlite/sqlitedslaz.lpk svneol=native#text/pascal
 components/sqlite/sqlitedslaz.pas svneol=native#text/pascal
-components/sqlite/sqlitedsresources.pas svneol=native#text/pascal
+components/sqlite/tableeditorform.lrs svneol=native#text/pascal
+components/sqlite/tableeditorform.pas svneol=native#text/pascal
 components/sqlite/tsqlitedataset.xpm -text svneol=native#image/x-xpixmap
 components/synedit/allsyneditunits.pp svneol=native#text/pascal
 components/synedit/design/tsynautocomplete.xpm -text svneol=native#image/x-xpixmap
