added DB Fields Editor for the IDE  from Alexandrov Alexandru - needs FPC 2.1
 SVN 7238@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -921,6 +921,12 @@ ideintf/componenttreeview.lrs svneol=native#text/pascal
 ideintf/componenttreeview.pas svneol=native#text/pascal
 ideintf/configstorage.pas svneol=native#text/pascal
 ideintf/dbpropedits.pas svneol=native#text/pascal
+ideintf/fieldseditor.lfm svneol=native#text/plain
+ideintf/fieldseditor.lrs svneol=native#text/pascal
+ideintf/fieldseditor.pas svneol=native#text/pascal
+ideintf/fieldslist.lfm svneol=native#text/plain
+ideintf/fieldslist.lrs svneol=native#text/pascal
+ideintf/fieldslist.pas svneol=native#text/pascal
 ideintf/formeditingintf.pas svneol=native#text/pascal
 ideintf/graphpropedits.pas svneol=native#text/pascal
 ideintf/helpfpdoc.pas svneol=native#text/pascal
@@ -931,6 +937,9 @@ ideintf/imagelisteditor.pp svneol=native#text/pascal
 ideintf/lazideintf.pas svneol=native#text/pascal
 ideintf/listviewpropedit.pp svneol=native#text/pascal
 ideintf/macrointf.pas svneol=native#text/pascal
+ideintf/newfield.lfm svneol=native#text/plain
+ideintf/newfield.lrs svneol=native#text/pascal
+ideintf/newfield.pas svneol=native#text/pascal
 ideintf/newitemintf.pas svneol=native#text/pascal
 ideintf/objectinspector.pp svneol=native#text/pascal
 ideintf/objinspstrconsts.pas svneol=native#text/pascal
