--- a/examples/codepageconverter/lazconverter.lpi
+++ b/examples/codepageconverter/lazconverter.lpi
@@ -14,43 +14,31 @@
       <TargetFileExt Value=""/>
       <Title Value="lazconverter"/>
     </General>
-    <Units Count="3">
+    <Units Count="2">
       <Unit0>
         <CursorPos X="1" Y="1"/>
         <Filename Value="lazconverter.lpr"/>
         <IsPartOfProject Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="lazconverter"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="17" Y="24"/>
+        <CursorPos X="23" Y="61"/>
         <EditorIndex Value="0"/>
         <Filename Value="mainunit.pas"/>
         <ComponentName Value="LazConverterForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="mainunit.lrs"/>
-        <TopLine Value="1"/>
+        <TopLine Value="47"/>
         <UnitName Value="mainunit"/>
-        <UsageCount Value="30"/>
+        <UsageCount Value="32"/>
       </Unit1>
-      <Unit2>
-        <CursorPos X="36" Y="9"/>
-        <EditorIndex Value="1"/>
-        <Filename Value="viewunit.pas"/>
-        <ComponentName Value="ViewForm"/>
-        <IsPartOfProject Value="True"/>
-        <Loaded Value="True"/>
-        <ResourceFilename Value="viewunit.lrs"/>
-        <TopLine Value="1"/>
-        <UnitName Value="viewunit"/>
-        <UsageCount Value="23"/>
-      </Unit2>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
-      <DestinationDirectory Value="/home/barko/CD/out"/>
+      <DestinationDirectory Value="/home/barko/tempo/out/"/>
       <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
       <ExcludeFileFilter Value="*.(bak|ppu|ppw|o|so);*~;backup"/>
     </PublishOptions>
@@ -60,7 +48,7 @@
         <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
-    <RequiredPackages Count="3">
+    <RequiredPackages Count="2">
       <Item1>
         <PackageName Value="SynEdit"/>
         <MinVersion Major="1" Valid="True"/>
@@ -68,25 +56,21 @@
       <Item2>
         <PackageName Value="LCL"/>
       </Item2>
-      <Item3>
-        <PackageName Value="filefindlaz"/>
-        <MinVersion Valid="True"/>
-      </Item3>
     </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="4"/>
+    <Version Value="5"/>
     <SearchPaths>
       <SrcPath Value="$(LazarusDir)/lcl/;$(LazarusDir)/lcl/interfaces/$(LCLWidgetType)/"/>
     </SearchPaths>
     <Parsing>
-      <SymantecChecking>
+      <SyntaxOptions>
         <DelphiCompat Value="True"/>
         <UseAnsiStrings Value="True"/>
-      </SymantecChecking>
+      </SyntaxOptions>
     </Parsing>
     <CodeGeneration>
-      <TargetProcessor Value="3"/>
+      <Generate Value="Faster"/>
     </CodeGeneration>
     <Linking>
       <Debugging>
@@ -99,7 +83,6 @@
       </Options>
     </Linking>
     <Other>
-      <CustomOptions Value="-d_off_TRANSLATESTRING"/>
       <CompilerPath Value="$(CompPath)"/>
     </Other>
   </CompilerOptions>
