--- a/doceditor/lazde.lpi
+++ b/doceditor/lazde.lpi
@@ -8,7 +8,7 @@
         <SaveOnlyProjectUnits Value="True"/>
       </Flags>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="8"/>
+      <ActiveEditorIndexAtStart Value="4"/>
       <AutoCreateForms Value="False"/>
       <IconPath Value="./"/>
       <TargetFileExt Value=".exe"/>
@@ -17,31 +17,31 @@
     <Units Count="13">
       <Unit0>
         <CursorPos X="3" Y="9"/>
-        <EditorIndex Value="3"/>
         <Filename Value="lazde.lpr"/>
         <IsPartOfProject Value="True"/>
-        <Loaded Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="lazde"/>
         <UsageCount Value="96"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="1" Y="194"/>
-        <EditorIndex Value="1"/>
+        <CursorPos X="11" Y="22"/>
+        <EditorIndex Value="4"/>
         <Filename Value="frmmain.pp"/>
         <ComponentName Value="MainForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="frmmain.lrs"/>
-        <TopLine Value="191"/>
-        <UnitName Value="frmmain"/>
+        <TopLine Value="1"/>
+        <UnitName Value="FrmMain"/>
         <UsageCount Value="96"/>
       </Unit1>
       <Unit2>
         <CursorPos X="1" Y="23"/>
+        <EditorIndex Value="2"/>
         <Filename Value="frmoptions.pp"/>
         <ComponentName Value="OptionsForm"/>
         <IsPartOfProject Value="True"/>
+        <Loaded Value="True"/>
         <ResourceFilename Value="frmoptions.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="frmOptions"/>
@@ -49,28 +49,30 @@
       </Unit2>
       <Unit3>
         <CursorPos X="1" Y="23"/>
+        <EditorIndex Value="3"/>
         <Filename Value="frmnewnode.pp"/>
         <ComponentName Value="NewNodeForm"/>
         <IsPartOfProject Value="True"/>
+        <Loaded Value="True"/>
         <ResourceFilename Value="frmnewnode.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="frmNewNode"/>
         <UsageCount Value="90"/>
       </Unit3>
       <Unit4>
-        <CursorPos X="20" Y="21"/>
-        <EditorIndex Value="4"/>
+        <CursorPos X="32" Y="27"/>
+        <EditorIndex Value="6"/>
         <Filename Value="frmmakeskel.pp"/>
         <ComponentName Value="MakeSkelForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="frmmakeskel.lrs"/>
-        <TopLine Value="5"/>
-        <UnitName Value="frmmakeskel"/>
+        <TopLine Value="1"/>
+        <UnitName Value="FrmMakeSkel"/>
         <UsageCount Value="67"/>
       </Unit4>
       <Unit5>
-        <CursorPos X="27" Y="18"/>
+        <CursorPos X="11" Y="16"/>
         <EditorIndex Value="0"/>
         <Filename Value="frmlink.pp"/>
         <ComponentName Value="LinkForm"/>
@@ -78,34 +80,36 @@
         <Loaded Value="True"/>
         <ResourceFilename Value="frmlink.lrs"/>
         <TopLine Value="1"/>
-        <UnitName Value="frmLink"/>
+        <UnitName Value="FrmLink"/>
         <UsageCount Value="60"/>
       </Unit5>
       <Unit6>
         <CursorPos X="1" Y="23"/>
+        <EditorIndex Value="1"/>
         <Filename Value="frmtable.pp"/>
         <ComponentName Value="TableForm"/>
         <IsPartOfProject Value="True"/>
+        <Loaded Value="True"/>
         <ResourceFilename Value="frmtable.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="frmTable"/>
         <UsageCount Value="60"/>
       </Unit6>
       <Unit7>
-        <CursorPos X="23" Y="9"/>
-        <EditorIndex Value="2"/>
+        <CursorPos X="35" Y="26"/>
+        <EditorIndex Value="5"/>
         <Filename Value="frmabout.pp"/>
         <ComponentName Value="AboutForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="frmabout.lrs"/>
         <TopLine Value="1"/>
-        <UnitName Value="frmabout"/>
+        <UnitName Value="FrmAbout"/>
         <UsageCount Value="51"/>
       </Unit7>
       <Unit8>
-        <CursorPos X="22" Y="27"/>
-        <EditorIndex Value="8"/>
+        <CursorPos X="28" Y="29"/>
+        <EditorIndex Value="11"/>
         <Filename Value="pkeditor.pp"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
@@ -114,18 +118,18 @@
         <UsageCount Value="45"/>
       </Unit8>
       <Unit9>
-        <CursorPos X="2" Y="73"/>
-        <EditorIndex Value="5"/>
+        <CursorPos X="21" Y="24"/>
+        <EditorIndex Value="7"/>
         <Filename Value="eleditor.pp"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
-        <TopLine Value="50"/>
-        <UnitName Value="eleditor"/>
+        <TopLine Value="1"/>
+        <UnitName Value="ElEditor"/>
         <UsageCount Value="45"/>
       </Unit9>
       <Unit10>
-        <CursorPos X="1" Y="23"/>
-        <EditorIndex Value="7"/>
+        <CursorPos X="34" Y="28"/>
+        <EditorIndex Value="10"/>
         <Filename Value="fpdeutil.pp"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
@@ -134,22 +138,24 @@
         <UsageCount Value="45"/>
       </Unit10>
       <Unit11>
-        <CursorPos X="1" Y="23"/>
-        <EditorIndex Value="6"/>
+        <CursorPos X="30" Y="9"/>
+        <EditorIndex Value="8"/>
         <Filename Value="frmexample.pp"/>
         <ComponentName Value="ExampleForm"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="frmexample.lrs"/>
         <TopLine Value="1"/>
-        <UnitName Value="frmExample"/>
+        <UnitName Value="FrmExample"/>
         <UsageCount Value="36"/>
       </Unit11>
       <Unit12>
-        <CursorPos X="1" Y="23"/>
+        <CursorPos X="35" Y="25"/>
+        <EditorIndex Value="9"/>
         <Filename Value="frmbuild.pp"/>
         <ComponentName Value="BuildForm"/>
         <IsPartOfProject Value="True"/>
+        <Loaded Value="True"/>
         <ResourceFilename Value="frmbuild.lrs"/>
         <TopLine Value="1"/>
         <UnitName Value="frmBuild"/>
