replaced cleanall with cleanlaz
 SVN 7302@trunk

--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -141,9 +141,9 @@ ifeq ($(OS_TARGET), win32)
         -$(DEL) lazarus.owr
 endif
 
-clean: cleanall cleanide
+clean: cleanlaz cleanide
 
-purge: cleanall cleanide
+purge: cleanlaz cleanide
         $(MAKE) -C examples clean
         $(MAKE) -C tools clean
 
