--- a/designer/Makefile.fpc
+++ b/designer/Makefile.fpc
@@ -7,7 +7,8 @@
 dirs=jitform
 
 [clean]
-files=$(wildcard ./units/*$(OEXT)) $(wildcard ./units/*$(PPUEXT)) $(wildcard ./units/*$(RSTEXT))
+files=$(wildcard *$(OEXT)) $(wildcard *$(PPUEXT)) $(wildcard *$(RSTEXT)) \
+  $(wildcard ./units/*$(OEXT)) $(wildcard ./units/*$(PPUEXT)) $(wildcard ./units/*$(RSTEXT))
 
 [rules]
-cleanall: clean
+cleanlaz: clean
