--- a/packager/Makefile.fpc
+++ b/packager/Makefile.fpc
@@ -6,10 +6,11 @@
 [target]
 
 [clean]
-files=$(wildcard ./units/*$(OEXT)) $(wildcard ./units/*$(PPUEXT)) $(wildcard ./units/*$(RSTEXT))
+files=$(wildcard *$(OEXT)) $(wildcard *$(PPUEXT)) $(wildcard *$(RSTEXT))\
+      $(wildcard ./units/*$(OEXT)) $(wildcard ./units/*$(PPUEXT)) $(wildcard ./units/*$(RSTEXT))$(wildcard ./units/*$(OEXT)) $(wildcard ./units/*$(PPUEXT)) $(wildcard ./units/*$(RSTEXT))
 
 [rules]
-cleanall: clean
+cleanlaz: clean
 
 # end.
 
