--- a/packager/registration/Makefile.fpc
+++ b/packager/registration/Makefile.fpc
@@ -25,7 +25,7 @@ files=$(wildcard $(COMPILER_UNITTARGETDIR)/*$(OEXT)) \
 packages=fcl
 
 [rules]
-cleanall: clean
+cleanlaz: clean
 
 [rules]
 .PHONY: cleartarget all
