created a lfm for AddFileToAPackageDialog  from Draius
 SVN 7374@trunk

--- a/.gitattributes
+++ b/.gitattributes
@@ -1826,6 +1826,8 @@ lcl/widgetset/wsstdctrls.pp svneol=native#text/pascal
 lcl/widgetset/wstoolwin.pp svneol=native#text/pascal
 lcl/xmlpropstorage.pas svneol=native#text/pascal
 /localize.sh -text svneol=native#application/x-sh
+packager/addfiletoapackagedlg.lfm svneol=native#text/plain
+packager/addfiletoapackagedlg.lrs svneol=native#text/pascal
 packager/addfiletoapackagedlg.pas svneol=native#text/pascal
 packager/addtopackagedlg.pas svneol=native#text/pascal
 packager/basepkgmanager.pas svneol=native#text/pascal
