--- a/packager/registration/Makefile
+++ b/packager/registration/Makefile
@@ -628,103 +628,103 @@ ifeq ($(FULL_TARGET),arm-linux)
 override COMPILER_UNITDIR+=.
 endif
 ifeq ($(FULL_TARGET),i386-linux)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-go32v2)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-win32)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-os2)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-freebsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-beos)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-netbsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-solaris)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-qnx)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-netware)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-openbsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-wdosx)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-emx)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-watcom)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),i386-netwlibc)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),m68k-linux)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),m68k-freebsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),m68k-netbsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),m68k-amiga)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),m68k-atari)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),m68k-openbsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),m68k-palmos)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),powerpc-linux)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),powerpc-netbsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),powerpc-macos)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),powerpc-darwin)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),powerpc-morphos)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),sparc-linux)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),sparc-netbsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),sparc-solaris)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),x86_64-linux)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),x86_64-freebsd)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifeq ($(FULL_TARGET),arm-linux)
-override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)/$(OS_TARGET)
+override COMPILER_UNITTARGETDIR+=../units/$(CPU_TARGET)-$(OS_TARGET)
 endif
 ifdef REQUIRE_UNITSDIR
 override UNITSDIR+=$(REQUIRE_UNITSDIR)
@@ -2650,4 +2650,4 @@ cleanlaz: clean
 .PHONY: cleartarget all
 cleartarget:
 	-$(DEL) $(COMPILER_UNITTARGETDIR)/lazaruspackageintf$(PPUEXT)
-all: cleartarget lazaruspackageintf$(PPUEXT)
+all: cleartarget $(COMPILER_UNITTARGETDIR) lazaruspackageintf$(PPUEXT)
