--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -24,10 +24,10 @@ unitdir=lcl/units/$(CPU_TARGET)-$(OS_TARGET) \
         components/synedit/units/$(CPU_TARGET)-$(OS_TARGET) \
         components/custom \
         components/mpaslex \
-        ideintf/units/$(CPU_TARGET)/$(OS_TARGET) \
+        ideintf/units/$(CPU_TARGET)-$(OS_TARGET) \
         designer designer/units debugger \
         packager \
-        packager/units/$(CPU_TARGET)/$(OS_TARGET) .
+        packager/units/$(CPU_TARGET)-$(OS_TARGET) .
 includedir=debugger designer packager include include/$(OS_TARGET)
 targetdir=.
 
